# PyDyssol

./: CMakeLists.txt  CMakeUserPresets.json  Dyssol.sln  README.md  config.ini
BaseSolvers/: BaseSolver.h  BaseSolvers.vcxproj
CacheHandler/: CacheHandler.vcxproj
DyssolGUI/: DyssolGUI.vcxproj
DyssolInstallers/Documentation/: Documentation.vcxproj
DyssolInstallers/Installer/: Installer.vcxproj
DyssolInstallers/Tests/: Tests.vcxproj
EquationSolvers/: EquationSolvers.vcxproj
ExternalLibraries/: CompileGraphviz.ps1  CompileHDF5.ps1  CompileSundials.ps1  CompileZLib.ps1
GUIDialogs/CalculationSequenceEditor/: CalculationSequenceEditor.vcxproj
GUIDialogs/CompoundsManager/: CompoundsManager.vcxproj
GUIDialogs/DustFormationTesterTab/: DustFormationTesterTab.vcxproj
GUIDialogs/FlowsheetEditor/: FlowsheetEditor.vcxproj
GUIDialogs/GridEditor/: GridEditor.vcxproj
GUIDialogs/HoldupsEditor/: HoldupsEditor.vcxproj
GUIDialogs/MainWindow/: MainWindow.vcxproj
GUIDialogs/MaterialsDatabaseTab/: MaterialsDatabaseTab.vcxproj
GUIDialogs/ModulesManagerTab/: ModulesManagerTab.vcxproj
GUIDialogs/OptionsEditor/: OptionsEditor.vcxproj
GUIDialogs/PhasesEditor/: PhasesEditor.vcxproj
GUIDialogs/SettingsEditor/: SettingsEditor.vcxproj
GUIDialogs/SimulatorTab/: SimulatorTab.vcxproj
GUIDialogs/StreamsViewer/: StreamsViewer.vcxproj
GUIDialogs/TearStreamsEditor/: TearStreamsEditor.vcxproj
GUIDialogs/UnitsViewer/: UnitsViewer.vcxproj
GUIWidgets/BasicStreamEditor/: BasicStreamEditor.vcxproj
GUIWidgets/BasicStreamsViewer/: BasicStreamsViewer.vcxproj
GUIWidgets/BasicThread/: BasicThread.vcxproj
GUIWidgets/QtPlot/: QtPlot.vcxproj
GUIWidgets/QtWidgets/: QtWidgets.vcxproj
GUIWidgets/SimulationThread/: SimulationThread.vcxproj
GUIWidgets/StatusWindow/: StatusWindow.vcxproj
HDF5Handler/: HDF5Handler.vcxproj
MaterialsDatabase/: MaterialsDatabase.vcxproj
ModelsAPI/: ModelsAPI.vcxproj
PyDyssol/: CMakeLists.txt  DyssolCLI.vcxproj  PyDyssol.cpp  PyDyssol.h  PyDyssol.vcxproj  PyDyssol.vcxproj.filters  PyDyssolBindings.cpp  PyDyssol_Feeds.cpp  PyDyssol_Holdups.cpp  PyDyssol_Options.cpp  PyDyssol_Parameters.cpp  PyDyssol_Parameters.h  PyDyssol_Phases_Comps.cpp  PyDyssol_Streams.cpp  PyDyssol_UnitStreams.cpp  PyDyssol_Utils.cpp  pydyssol.pyi  pydyssol_utils.py
PyDyssol_nanobind/: CMakeLists.txt  PyDyssolBindings_nb.cpp  PyDyssol_Feeds_nb.cpp  PyDyssol_Holdups_nb.cpp  PyDyssol_Options_nb.cpp  PyDyssol_Parameters_nb.cpp  PyDyssol_Phases_Comps_nb.cpp  PyDyssol_Streams_nb.cpp  PyDyssol_UnitStreams_nb.cpp  PyDyssol_Utils_nb.cpp  PyDyssol_nanobind.vcxproj  PyDyssol_nanobind.vcxproj.filters  PyDyssol_nb.cpp  PyDyssol_nb.h
ScriptInterface/: ScriptInterface.vcxproj
SimulatorCore/: ModelsManager.cpp  SimulatorCore.vcxproj
Utilities/: BuildVersion.h  DyssolStringConstants.h  FileSystem.cpp  Utilities.vcxproj
(+28 files in other folders)
